# coremlprofiler

./: .gitignore  README.md  cli.py  pyproject.toml
coremlprofiler/: __init__.py  cli.py  prof.py
tests/: test_main.py
